--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>aboutshop</title>
+    <link rel="index icon" href="./static/favicon.png">
   </head>
   <body>
     <div id="app"></div>
